# S7-1200

./: README.md  pyproject.toml
src/plc_tester/: __init__.py  main.py
src/plc_tester/core/: config_manager.py  opcua_client.py  parser.py  s7_client.py
src/plc_tester/ui/: main_window.py  opcua_tab.py  s7_tab.py
tests/: test_parser.py
